--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body style="background-color: black;">
     <p style="color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; word-spacing: 2px;">
-    These are short, famous texts in English from classic sources like the Bible or Shakespeare. Some texts have word
+    These are short and famous texts in English from classic sources like the Bible or Shakespeare. Some texts have word
     definitions and explanations to help you. Some of these texts are written in an old style of English. Try to understand
     them, because the English that we speak today is based on what our great, great, great, great grandparents spoke before!
     Of course, not all these texts were originally written in English. The Bible, for example, is a translation. But they
