add a text to the secret

--- a/secret.html
+++ b/secret.html
@@ -6,7 +6,7 @@
 <body>
 <p>
     I said that I wanted to write about something real and I knew people who had died but I did not know any people who had
-    been killed, except Edward's father. 
+    been killed, except Edward's father. He fucked him >_<. 
 </p>
 </body>
 </html>
